--- a/twitter/package.json
+++ b/twitter/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "twitter": "^1.3.0"
   }
 }
